--- a/www/css/tabakero.css
+++ b/www/css/tabakero.css
@@ -228,7 +228,7 @@ body {position:relative;}
           max-width:600px;
         }
 
-        .mainframe__about .about__story p {
+        .about__story p {
           padding:15px;
           text-align: left;
           font-size:16px;
