--- a/rinser/www/css/rinser.css
+++ b/rinser/www/css/rinser.css
@@ -1,6 +1,66 @@
-body {position:relative;}
+/* COLOR SCHEME:
+
+Text/icons:#2c5b72 #1b405b
+
+Header/ Footer: 
+dark  #21475e
+lighter #26526d
+
+
+BGs:
+darker #aec5d0
+lighter #d3dce0
+white #eee
+
+
+tab:
+#d3dce0 #c5d3da
+
+
+collapse:
+#e2e8e9
+#eeeeee
+
+-table:
+#3f86a5
+#eee
+#e2e2e2
+
+Electric BG 
+lighter #dce3e7
+darker #4b819b
+
+
+gallery:
+BG #4b819b
+-gallery bg1 #eee
+-gallery bg2 #dce3e7
+-gallery border #4b819b
+
+contacts: 
+bg #eeeeee
+text #3f82a1
+button ##21475e
+
+*/
+
+body {
+      position:relative;
+      min-width: 500px;
+      color: #2c5b72;
+      font-weight: bold;
+      font-size: 16px;
+      }
 
 /* Positioners */
+
+
+        .mainframe .container-fluid {
+          padding-left: 0;
+          padding-right: 0;
+          /* background-color: #aec5d0; */
+        }
+
         .header__content_position {
           max-width:800px;
           margin:0 auto;
@@ -13,8 +73,9 @@ body {position:relative;}
         }
 
         .himchistka__pricebox_position {
-          margin:0 auto;
           
+          margin:0 auto;
+          max-width: 600px;
         }
 
         .himchistka__content_position,
@@ -28,8 +89,14 @@ body {position:relative;}
           max-width:800px;
           margin:0 auto;
           padding-bottom:15px;
+         
         }
-  
+        .elektrika__content_row,
+        .contacts__content_row {
+          margin: 0 auto;
+          max-width: 95%;
+        }
+
 .topframe {
   background-color: #555;
 }
@@ -37,10 +104,11 @@ body {position:relative;}
 
 
     .topframe__menu {
-      height: 50px;
+      height: 150px;
+      background-color: #21475e;
     }
 
-        /*.affix {
+        .affix {
           top:0;
           width: 100%;
           z-index: 9999 !important;
@@ -49,10 +117,10 @@ body {position:relative;}
         .affix ~ .container-fluid {
           position: relative;
           top: 100px;
-        }*/
+        }
         .navbar {
           margin-bottom:0;
-          background-color: #555;
+          background-color: #21475e;
           z-index: 9999;
           border: 0;
           font-size: 14px !important;
@@ -62,7 +130,7 @@ body {position:relative;}
         }
         
         .navbar-nav {
-          width:700px;
+          /*width:750px;*/
           margin:auto;
           float:none !important;
         }
@@ -75,184 +143,332 @@ body {position:relative;}
           
           background-color: #444 !important;
         }
-        /*
+       
         .navbar-default .navbar-toggle {
           border-color: transparent;
           color: #fff !important;
-        }*/
+        }
 
     .topframe__slider {}
         
         .topframe__slider_image {
           width: 100%;
           margin: auto;
-          height: 500px;
-          
-        }
-
-        /*.topslider_image {
-          width: 100%;
-          margin: auto;
-          height: 500px;
-          
-        }
-
-        .topslider_image-1 {
-          background: url("../content/slider/01.jpg") no-repeat;
-          background-position: center;
-          background-size:cover;
-        }
-
-        .topslider_image-2 {
-          background: url("../content/slider/02.jpg") no-repeat;
-          background-position: center;
-          background-size:cover;
-        }
-
-        .topslider_image-3 {
-          background: url("../content/slider/03.jpg") no-repeat;
-          background-position: center;
-          background-size:cover;
-        }
-
-        .topslider_image-4 {
-          background: url("../content/slider/04.jpg") no-repeat;
+          height: 550px;
+          background: url("../content/front_photo.jpg") no-repeat;
           background-position: center;
           background-size:cover;
         }
 
 
-        .slider__carousel{
-          width:100%;
-          padding:0;
-          margin:0;
-        }
-
-        .slider__controlbar {
-          position:relative;
-          width:100%;
-          height:50px;
-        }
-        #myCarousel .carousel-inner img {
-          -webkit-filter: grayscale(90%);
-          filter: grayscale(90%); 
-          width: 100%;
-          margin: auto;
-          height:500px;
-        }
-        
-        #myCarousel .carousel-caption h3 {
-          color: #fff !important;
-        }
-        
-        #myCarousel ol.carousel-indicators {
-          bottom:-50px !important;
-          list-style: square initial initial;
-        }
-
-        #myCarousel ol.carousel-indicators li {
-          border-radius:0;
-          width:15px;
-          height:15px;
-          border: 1px solid white;
-          color:transparent;
-        }
-
-        #myCarousel .carousel-indicators .active {
-          background-color:#fff;
-          margin:0 0 1px 0 !important; 
-          
-        }
-
-        #myCarousel .carousel-indicators li:hover {
-          background-color:#777;
-          
-        }
-
-        @media (max-width: 600px) {
-          #myCarousel .carousel-caption {
-            display: none; 
-          }      
-        } */
 
 .mainframe {}
         
-
+    h2 {
+      margin-top:30px;
+      margin-bottom:30px;
+      font-size:24px;
+      /* border-bottom:3px solid #2c5b72; */
+      text-decoration: underline;
+    }
 
     .mainframe__himchistka {
-      background-color: #fff;
+      background-color: #aec5d0;
       margin-bottom:0px;
     }
         .himchistka__content {
           text-align: center;
         }
-            .himchistka__pricebox {
-                width:600px;
-            }
+            
         .himchistka__blocks {
           margin: 0 0 0 0;
-          padding: 0 0 0 0;
+          padding: 10px 0 10px 0;
           width:100%;
-          background-color:silver;
+          background-color: #dce3e7;
+        }
+          .himchistka__blocks_content{
+            text-align:center;
+            /* min-width: 450px; */
+          }
+
+          .himchistka__blocks_maintext {
+            display: inline-block;
+            max-width: 600px;
+          }
+
+            .himchistka__blocks p {
+              margin-top:15px;
+            }
+
+            .blocks__icon_block {
+              text-align:center;
+              margin: 30px 0 10px 0;
+            }
+
+      .himchistka__pricebox {
+        margin-top: 40px;
+        margin-bottom:30px;
+        }
+        
+        .himchistka__pricebox_nav{
+          border-bottom-color:#4b819b;;
         }
 
+        .himchistka__pricebox_nav li.active a,
+        .himchistka__pricebox_nav li.active a:focus,
+        .himchistka__pricebox_nav li.active a:hover {
+          background-color: #dce3e7;
+          border-top-color:#4b819b;
+          border-left-color:#4b819b;
+          border-right-color:#4b819b;
+          color: #2c5b72;
+        }  
+        .himchistka__pricebox_nav li a{
+          background-color: #c5d3da;
+          color: #4b819b;
+          border-bottom: 1px solid #4b819b;
+        }  
+        .himchistka__pricebox_nav li a:hover {
+          background-color:#dce3e7;
+          color: #4b819b;
+          border-color: #d3dce0;
+          border-bottom: 1px solid #4b819b;
+        }
+
+a {}
+
+
+        .himchistka__pricebox_content {
+    height: 391px;
+    border: 1px solid #4b819b;
+    border-top:transparent;
+    border-bottom-left-radius: 5px;
+    border-bottom-right-radius: 5px;
+    background-color: #dce3e7;
+    }
+          .tab_pricebox_row {
+            
+margin: 10px auto;
+            
+max-width: 530px;
+            
+padding: 0;
+            
+/* height: 122px; */
+            
+background-color: #eaeaea;
+          }
+  
+          #home h3 {
+            text-align:center;
+            display: inline-block;
+            width: 50%;
+            font-size: 18px;
+            font-weight: bold;
+            text-decoration: underline;
+            margin: 25px 0 0 0;
+          }
+
+h3 {}
+          
+          #home .himchistka__content_pricebox-right {
+            height: 100px;
+            text-align:center;
+          }
+
+          #home .himchistka__content_pricebox-left {
+            margin-top: 30px;
+            text-align:center;
+          }
+          #home .himchistka__pricebox_price {
+            
+margin-top: 35px;
+            
+font-size: 22px;
+            
+text-decoration: underline;
+          }
+  
     .mainframe_tonirovka {
       margin-bottom:0px;
-      background-color: #fff;
+      background-color: #eee;
     }
         .tonirovka__content {
-       
+       text-align:center;
         }
 
         .tonirovka__cardline {
           width:100%;
-          background-color:silver;
+          background-color: #3f86a5;
         }
 
             .tonirovka__cards {
-              
              } 
     
                 .tonirovka__card {
                   
+max-width: 85%;
+                  
+min-width: 120px;
+                  
+background-color: #dce3e7;
+                  
+margin: auto;
+                  
+min-height: 240px;
+                  
+font-size: 14px;
+                  
+font-weight: bold;
+                  
+box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);
                 }
-        .tonirovka__pricebox {
+                .tonirovka__card_block{
+                  text-align: center;
+                  padding: 50px 0;
+                }
+                .tonirovka__card_icon {
+                  margin: auto;
+                  padding: 10px 0;
+                }
 
-        }
+                .tonirovka__card_container{
+                  max-width: 90%;
+                  margin: auto;
+                }
+                .tonirovka__cardline_textbox{
+                  margin-top: 30px;
+                  padding: 10px;
+                  text-align:center;
+                  background-color: #dce3e7;
+                }
+                .tonirovka__cardline_textbox p {
+                  margin:0;
+                }
+
+        .tonirovka__pricebox {padding: 50px 10px;}
           .panel-group {
             margin-bottom: 5px;
           }
+
+          .tonirovka__pricebox .glyphicon-chevron-down {
+            position:absolute;
+            right:20px;
+            top: 12px;
+            color: #4b819b;
+          }
+          .tonirovka__pricebox .glyphicon-chevron-down:hover {
+            
+color: #aec5d0;
+          }
+          .tonirovka__pricebox .panel-collapse {
+          }
               .panel-heading {
-                background-color:#f5f5f5;
+                position: relative;
+                background-color: #dce3e7;
               }
 
               .panel-heading p {
                 margin: 0;
-                color:#333;
+                color:#4b819b;
+                font-weight:bold;
               }
               
-              ..panel-heading a:hover {
+              .panel-heading a:hover {
                 color:#333;
                 text-decoration: none;
+              }
+              
+              .panel-default {
+                background-color: #eee;
+                border-color: #aec5d0;
+              }
+               
+
+              #table1, #table2, #table3, #table4, #table0 {
+                margin: 30px auto;
+                text-align: center;
+                vertical-align: middle;
+                border-collapse: collapse;
+                border: 2px solid #4b819b;
+                color: #222;
+                font-weight:normal;
+                box-shadow: 2px 2px 5px 0 rgba(0, 0, 0, 0.25);
+              }
+
+              #table0{
+                width: 450px;
+                margin: 0 auto !important;
+               }
+               #table0 th{
+                background-color: #d3dce0;
+                color:#2c5b72;
+               }
+               #table0 td, #table0 th{
+                
+                border-color:#2c5b72;
+               }
+
+
+               #menu1 {
+                padding-top:20px;
+               }
+               .himchistka_table_image {
+                width:80px;
+               }
+
+              .table-center{
+                text-align:center;
+              }
+
+              .td-left {
+                text-align:left;
+              }
+              td, th {
+                padding: 2px 5px;
+                border: 1px solid #ccc;
+              }
+
+              tr:nth-child(2n) {
+                background-color: #aec5d0;
+              }
+              th {
+                background-color: #4b819b;
+                color: #eee;
+              }
+              .table-unborder {
+                border-bottom:none;
               }
 
     .mainframe_elektrika {
       margin-bottom:0px;
-      background-color: #e5e5e5;
+      background-color: #dce3e7;
     }
         .elektrika__content {
           text-align:center;
+        }
+        .elektrika__content h2 {
+          margin-bottom: 50px;
+        }
+        .elektrika__content_row-2 {
+          max-width: 65%;
+          margin: auto;
+        }
+        .elektrika__content_item {color: #eee;padding-top: 10px;padding-bottom: 10px;/* margin-bottom: 30px; */height: 178px;margin: 0 auto 20px auto;border-radius: 10px;border: 2px solid #dce3e7;background-color: #4b819b;max-width: 250px;min-width: 250px;}
+
+.col-sm-4.elektrika__content_item {}
+        .elektrika__content_item p {
+          margin-top: 10px;
         }
 
 
     .mainframe_gallery {
       margin-bottom:0px;
-      background-color: #e5e5e5;
+      background-color: #aec5d0;
     }
         .gallery__content {
-          padding:30px;
+          padding: 10px 30px 30px 30px;
           text-align:center;
-          
         }
 
         .gallery__content h3 {
@@ -268,8 +484,8 @@ body {position:relative;}
               padding:15px 0;
               background-color:white;
               border-radius:10px;
+              border: 8px solid #4b819b;
               text-align:center;
-
             }
         
             .content__innerrow {
@@ -283,16 +499,38 @@ body {position:relative;}
                 .content__innerrow_img  {
                   padding:5px;
                   width: 100%;
+                  max-height:150px;
+                  vertical-align:middle;
                 }
 
 
       
     .mainframe__contacts {
       margin-bottom:0px;
-      background-color: #fff;
+      background-color: #f5f5f5;
     }
         .contacts__content {
-       
+          color:#2c5b72;
+          margin: 50px auto;
+        }
+        .contacts__content span {
+          color:#2c5b72;
+        }
+
+        .contacts__content .form-control {
+          color: #aec5d0;
+          border-color:#aec5d0;
+        }
+        .contacts__content button {
+          color: #EEE;
+          background-color: #4b819b;
+          border-color: #4b819b;
+        }
+
+        .contacts__content button:hover {
+          color: #eee;
+          background-color: #21475e;
+          border-color: #4b819b;
         }
         
     .mainframe__map {
@@ -301,12 +539,17 @@ body {position:relative;}
 
         }
         
-        
+        #googleMap {
+          width: 100%;
+          height: 400px;
+          -webkit-filter: grayscale(100%);
+          filter: grayscale(100%);
+      }
         
 
 .botframe {
   height:200px;
-  background-color: #555;
+  background-color: #21475e;
 }
     .botframe__content {}
     
