--- a/rinser/www/css/rinser.css
+++ b/rinser/www/css/rinser.css
@@ -486,7 +486,7 @@ color: #aec5d0;
           max-width: 65%;
           margin: auto;
         }
-        .elektrika__content_item {color: #eee;padding-top: 10px;padding-bottom: 10px;/* margin-bottom: 30px; */height: 178px;margin: 0 auto 20px auto;border-radius: 10px;border: 2px solid #dce3e7;background-color: #4b819b;max-width: 250px;min-width: 250px;box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);}
+        .elektrika__content_item {color: #eee;padding-top: 10px;padding-bottom: 10px;/* margin-bottom: 30px; */height: 178px;margin: 0 auto 20px auto;border-radius: 10px;border: 2px solid #dce3e7;background-color: #4b819b;max-width: 250px;box-shadow: 5px 5px 10px 0 rgba(0, 0, 0, 0.25);}
 
 .col-sm-4.elektrika__content_item {}
         .elektrika__content_item p {
@@ -534,6 +534,17 @@ color: #aec5d0;
                   width: 100%;
                   max-height:150px;
                   vertical-align:middle;
+                }
+
+                @media (max-width: 768px) {
+                  .content__innerrow_img  {
+                  
+                  max-height:100%;
+                  
+                }
+
+
+
                 }
 
 
