One more update v 1.02

--- a/rinser/www/css/rinser.css
+++ b/rinser/www/css/rinser.css
@@ -168,7 +168,7 @@ background-color: #406f8a !important;
         }
        
         .navbar-default .navbar-toggle {
-          border-color: transparent;
+          border-color: #fff;
           color: #fff !important;
         }
 
