--- a/eden_tsc/www/css/eden_ferrari.css
+++ b/eden_tsc/www/css/eden_ferrari.css
@@ -158,7 +158,7 @@ div .absolute .language:focus {
 
 #p5_back {
     height:100%;
-    background-color: rgba(175, 165, 170, 0.60);  }
+    background-color: rgba(35, 31, 32, 0.50);  }
 
 #p3_back {
     height:100%;
@@ -266,8 +266,12 @@ div .absolute .language:focus {
     text-align: center;
     /*float:none;*/ }
 
+#main_menu li {
+    display:inline-block;
+}
 
 .but {
+
     cursor: pointer;
     padding: 0;
     min-width:60px;}
@@ -423,7 +427,13 @@ ul .but a:focus {
     #matrix {
         margin-top:5%;
         /*background-color:rgba(11, 13, 16, 0.70);*/
-        border-radius:10px; }  
+        border-radius:10px; } 
+        #main_menu {
+            padding:0;
+        }
+        ul .but a {
+        padding-left:3px;
+        padding-right:3px;  } 
 }
 
 /* Fix to collapsing blackstripe <p> */
@@ -432,4 +442,5 @@ ul .but a:focus {
         font-size:11px; }
     div.absolute {
         font-size:10px; }
+    ul .but a {font-size:12px;}
 }
