--- a/eden_tsc/www/css/eden_ge.css
+++ b/eden_tsc/www/css/eden_ge.css
@@ -7,3 +7,13 @@
     ul .but a {
         padding-top:3px;}
 }
+
+
+@font-face {
+    font-family: bpg_glaho;
+    src: url(./fonts/bpg_glaho.ttf);
+}
+
+#main_menu_row, #central_frame {
+	font-family:bpg_glaho !important;
+}
