--- a/eden_tsc/www/css/eden_ferrari.css
+++ b/eden_tsc/www/css/eden_ferrari.css
@@ -209,8 +209,9 @@ div .absolute .language:focus {
 /* Slides themselves */
 #main0 {
     background-color:#182948;
-    background: url(../css/0_1920.jpg) no-repeat center fixed; 
+    /*background: url(../css/0_1920.jpg) no-repeat center fixed; */
     /*background-size: cover;*/
+    background: url(../content/company_1920.jpg) no-repeat center fixed;
     height:100%;
     width:100%;
     padding:0;
@@ -218,7 +219,8 @@ div .absolute .language:focus {
 
 #main3{
     background-color:#181649;
-    background: url(../css/1_1920.jpg) no-repeat center fixed;
+    /*background: url(../css/1_1920.jpg) no-repeat center fixed;*/
+    background: url(../content/services_1920.jpg) no-repeat center fixed;
     height:100%;
     width:100%;
     padding:0;
@@ -226,7 +228,8 @@ div .absolute .language:focus {
 
 #main4{
     background-color:#580000;
-    background: url(../css/4_1920.jpg) no-repeat left fixed;
+    /*background: url(../css/4_1920.jpg) no-repeat left fixed;*/
+    background: url(../content/tours_1920.jpg) no-repeat left fixed;
     height:100%;
     width:100%;
     padding:0;
@@ -236,7 +239,8 @@ div .absolute .language:focus {
 
 #main2 {
     background-color:#0c0d10;
-    background: url(../css/2_1920.jpg) no-repeat center fixed;
+    /*background: url(../css/2_1920.jpg) no-repeat center fixed;*/
+    background: url(../content/partners_1920.jpg) no-repeat center fixed;
     height:100%;
     width:100%;
     padding:0;
@@ -244,7 +248,8 @@ div .absolute .language:focus {
 
 #main1 {
     background-color:#614350;
-    background: url(../css/3_1920.jpg) no-repeat center fixed;
+    /*background: url(../css/3_1920.jpg) no-repeat center fixed;*/
+    background: url(../content/contacts_1920.jpg) no-repeat center fixed;
     height:100%;
     width:100%;
     padding:0;
