--- a/eden_tsc/www/css/eden.css
+++ b/eden_tsc/www/css/eden.css
@@ -188,8 +188,9 @@ div .absolute .language:focus {
 /* Slides themselves */
 #main0 {
     background-color:#182948;
-    background: url(../css/0_1920.jpg) no-repeat center fixed; 
+    /*background: url(../css/0_1920.jpg) no-repeat center fixed; */
     /*background-size: cover;*/
+    background: url(../content/company_1920.jpg) no-repeat center fixed;
     height:100%;
     width:100%;
     padding:0;
@@ -197,15 +198,28 @@ div .absolute .language:focus {
 
 #main3{
     background-color:#181649;
-    background: url(../css/1_1920.jpg) no-repeat center fixed;
+    /*background: url(../css/1_1920.jpg) no-repeat center fixed;*/
+    background: url(../content/services_1920.jpg) no-repeat center fixed;
     height:100%;
     width:100%;
     padding:0;
     margin:0;   }
+/*
+#main4{
+    background-color:#580000;
+    background: url(../css/4_1920.jpg) no-repeat left fixed;
+    background: url(../content/tours_1920.jpg) no-repeat left fixed;
+    height:100%;
+    width:100%;
+    padding:0;
+    margin:0;   }
+*/
+
 
 #main2 {
     background-color:#0c0d10;
-    background: url(../css/2_1920.jpg) no-repeat center fixed;
+    /*background: url(../css/2_1920.jpg) no-repeat center fixed;*/
+    background: url(../content/partners_1920.jpg) no-repeat center fixed;
     height:100%;
     width:100%;
     padding:0;
@@ -213,7 +227,8 @@ div .absolute .language:focus {
 
 #main1 {
     background-color:#614350;
-    background: url(../css/3_1920.jpg) no-repeat center fixed;
+    /*background: url(../css/3_1920.jpg) no-repeat center fixed;*/
+    background: url(../content/contacts_1920.jpg) no-repeat center fixed;
     height:100%;
     width:100%;
     padding:0;
