--- a/eden_tsc/www/css/eden.css
+++ b/eden_tsc/www/css/eden.css
@@ -431,3 +431,9 @@ ul .but a:focus {
     div.absolute {
         font-size:10px; }
 }
+
+@media only screen and (min-width:1024px) {
+    #main_menu {
+    font-size:16px;
+    }
+}
