--- a/eden_tsc/www/css/eden_ferrari.css
+++ b/eden_tsc/www/css/eden_ferrari.css
@@ -468,3 +468,9 @@ ul .but a:focus {
 @media only screen and (max-width:370px) {
         #menu_service {display:none !important;}
     }
+
+@media only screen and (min-width:1024px) {
+    #main_menu {
+    font-size:16px;
+    }
+}
