--- a/eden_tsc/www/css/eden_ferrari.css
+++ b/eden_tsc/www/css/eden_ferrari.css
@@ -455,6 +455,13 @@ ul .but a:focus {
         padding-right:3px;  } 
 }
 
+@media only screen and (max-width:330px) {
+   
+        ul .but a {
+        padding-left:0px;
+        padding-right:0px;  } 
+}
+
 /* Fix to collapsing blackstripe <p> */
 @media only screen and (max-width:380px) {
     #blackstripe_row p {
