--- a/eden_tsc/www/css/eden_ferrari.css
+++ b/eden_tsc/www/css/eden_ferrari.css
@@ -481,7 +481,7 @@ ul .but a:focus {
     font-size:16px;
     }
 }
-@media only screen and (min-width:1920px) and (min-height:1200) {
+@media only screen and (min-width:1920px) and (min-height:1200px) {
  #main0 {
     background: url(../content/company_1920.jpg) no-repeat;
      background-size:cover; 
