--- a/izm_bani/www/css/bani.css
+++ b/izm_bani/www/css/bani.css
@@ -59,6 +59,7 @@ body {
         }
 
         .slider__controlbar {
+        	background-color:#2f2e2d;
           position:relative;
           width:100%;
           height:50px;
@@ -89,7 +90,7 @@ body {
         }
 
         #myCarousel .carousel-indicators .active {
-          background-color:#800000;
+          background-color:#4f0404;
           margin:0 0 1px 0 !important; 
           
         }
@@ -165,7 +166,7 @@ text-align:center;
 	
 	}
 	.video__block_text2_wrapper {
-		background-color:#777;
+		background-color:#2f2e2d;
 	}
 	.video__block_text2 {
 		margin:0 auto;
@@ -176,7 +177,7 @@ text-align:center;
 
 .anons__block {
 margin: 0;
-background-color:#dedede;
+background-color:#2f2e2d;
 }
 
 
@@ -210,7 +211,7 @@ padding-bottom:15px;
 .first__block-2 {
 	padding-top:15px;
 	padding-bottom:15px;
-background-color:#777;
+background-color:#2f2e2d;
 }	
 	.first__block_header{
 text-align:center;
@@ -252,7 +253,7 @@ padding-bottom:15px;
 	
 	}
 	.first__block_text2_wrapper {
-		background-color:#777;
+background-color:#2f2e2d;
 	}
 	.first__block_text2 {
 		margin:0 auto;
@@ -265,7 +266,7 @@ padding-bottom:15px;
 	padding-top:15px;
 	padding-bottom:15px;
 margin: 0;
-background-color:#dedede;
+background-color:#2f2e2d;
 }
 
 
