--- a/izm_bani/www/css/main_template.css
+++ b/izm_bani/www/css/main_template.css
@@ -11,15 +11,18 @@
 }
 
 body {
-/*background-color: #51190e; #361818;*/
+/*background-color: #51190e; #361818;
+background-color:#5b0c0c;*/
 background-color: #2f0404;
+
 color:#fff;
 }
 
 .block__header {
 /*background-image: url(../content/galleries/main/logo300.png);*/
 background-image: url(../content/logo_under.png);
-height: 210px;
+height: 222px;
+    background-size: cover;
 background-position: center top;
 background-color:#600000;
 }
@@ -34,7 +37,7 @@ background-color:#600000;
 	  		
 	.header__content_text {
 	position:absolute;
-	top:50px;
+	top:25px;
 	padding-left:20px;
 	width:250px;
 	color:#fff;
@@ -51,7 +54,7 @@ background-color:#600000;
   	.header__content_logo {
 
   		margin:auto;
-  		width:300px;
+  		width:230px;
   	}
   	.logo_pic {
   		width:100%;
@@ -68,6 +71,7 @@ font-family:izhitsa;
           top:0;
           width: 100%;
           z-index: 9999 !important;
+          background-color: #660c0c !important;
         }
                
         .affix ~ .container-fluid {
@@ -82,13 +86,15 @@ font-family:izhitsa;
     margin: auto !important;
     display: inline-block;
     max-width:100%;
-    background-color: #2f0404;
+   /* background-color: #2f0404;*/
+   background-color:transparent;
     color:#fff;
     vertical-align: middle;
 
     }
 .navbar-inverse {
-	background-color: #2f0404;
+	/*background-color: #2f0404;*/
+	background-color:transparent;
 border-color:transparent;}
 
     	.navbar-nav a {
@@ -121,7 +127,11 @@ border-color:transparent;}
 }
   	
 .block__footer {
-height:100px;
+background-image: url(../content/logo_under.png);
+    background-size: cover;
+background-position: center top;
+background-color:#5b0c0c;
+height:140px;
 }
 
 	.footer__info {
@@ -135,11 +145,11 @@ height:100px;
 		}
 		
 		.footer__info_text h1 {
-			font-size:22px;
+			font-size:16px;
 		}
 
 		.footer__info_text p {
-			font-size:16px;
+			font-size:14px;
 		}
 
 		.footer__info_phone {
@@ -150,7 +160,7 @@ height:100px;
 		}
 
 		.footer__info_phone p {
-			font-size:22px;
+			font-size:18px;
 			padding-top:25px;
 		
 		}
