--- a/izm_bani/www/css/sheet.css
+++ b/izm_bani/www/css/sheet.css
@@ -7,6 +7,7 @@
 	display:inline-block;
 	background-color:#777;
 	padding-bottom:30px;
+	border: 2px solid #aaa;
 
 
 }
@@ -35,6 +36,14 @@
 .ritz .waffle th {
 	display:none;
 }
+
+.ritz .waffle td {
+
+	border-left: 1px solid #aaa;
+	border-right: 1px solid #aaa;
+}
+
+
 .ritz .waffle .s0-r {
 	background-color:#660c0c;
 	text-align:center;
@@ -73,7 +82,10 @@
 	vertical-align:bottom;
 	white-space:nowrap;
 	direction:ltr;
-	padding-top:15px;
+	padding-top:5px;
+	padding-bottom:10px;
+	border-top: 1px solid #aaa;
+	border-bottom: 1px solid #aaa;
 	/*padding:0px 3px 0px 3px;*/}
 .ritz .waffle .s2{
 	text-align:left;
