--- a/izm_bani/www/css/sheet.css
+++ b/izm_bani/www/css/sheet.css
@@ -6,8 +6,9 @@
 .ritz .waffle {
 	display:inline-block;
 	background-color:#777;
-	padding-bottom:30px;
+	
 	border: 2px solid #aaa;
+	margin-bottom:20px;
 
 
 }
